# otk

./: .gitignore  .python-version  AUTHORS  LICENSE  LICENSE.md  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
designs/: README.md  aspheric_telecentric_lens.zmx
examples/otk_cairo/: otk_cairo_trains.py
examples/pov/: .gitignore  box.py  cylinder.py  singlet.py  singlet_sequence.py  sphere.py  spherical_lens.py  spherical_lens_array.py  train.py
examples/rt2/: .gitignore  benchmark.py  conic_telecentric_lens.zmx  microlens_array.py  singlet_lens.py  zemax_aspheric_telecentric_lens.py  zemax_conic_telecentric_lens.py
examples/sdb/: .gitignore  make_primitives_html.py  render.py  render_glsl.py  render_pyqt.py  zoo.py
glasses/agfs/: NIKON-HIKARI_201911.AGF  angstromlink.AGF  misc.agf  sumita-opt-dl-data-20200511235805.agf
notes/: Distance from point to paraboloid - analytic solution sandbox.ipynb  Distance from point to paraboloid - roots study.ipynb  rt2.md  zemax_conic.ipynb
otk/: __init__.py  _utility.py  abcd.py  agf.py  beams.py  bvar.py  delegate.py  functions.py  geo3.py  h4t.py  htm.py  math.py  og.py  otk_cairo.py  otk_gizeh.py  palettes.py  paraxial.py  pbg.py  pov.py  prism.py  qt.py  ri.py  rii.py  rt2_scalar_qt.py  rtm4.py  sdb_qt.py  trains.py  types.py  v3.py  v3h.py  v4.py  v4b.py  v4h.py  v4hb.py  vapory.py  vector3.py  vectors.py  vp.py  zemax.py
otk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
otk/asbp/: __init__.py  apps.py  fsq.py  math.py  plotting.py  profiles.py  sa.py  sbt.py  source.py  tracing.py  widgets.py
otk/asbp1/: __init__.py  _fe.py  _functions.py  _propagate.py  _sa.py
otk/asbt1/: __init__.py  _sbt.py  _tracing.py
otk/designs/: US06754446-1.ZMX  US06870688-1.zmx
otk/draw2/: __init__.py  base.py  cairo.py
otk/pbg/: __init__.py  _core.py  gizeh.py  pgx.py
otk/properties/: README.md
otk/refindinf/: __init__.py  _main.py
otk/rii/: __init__.py  _rii.py
otk/rt/: __init__.py  analysis.py  interfaces.py  lines.py  pgl.py  profiles.py  raytrace.py  surfaces.py
otk/rt1/: __init__.py  _analysis.py  _boundaries.py  _masks.py  _profiles.py  _raytrace.py  _surfaces.py  analysis.py  gizeh.py  interfaces.py  lines.py  pgl.py  profiles.py  raytrace.py  surfaces.py
otk/rt2/: __init__.py  base.py  check_numba.py  check_single_dispatch.py  cli.py  convert.py  point_parabola.py  qt.py  rt2.md  rt2_scalar.py  rt2_scalar_qt.py  scalar.py  stock.py  tracing.py  vectorized.py  (+1 more)
sandbox/: US02084714-1.zmx  US08934179-4.zmx  load_various_zmx_files.py
test/: test_abcd.py  test_geo3.py  test_math.py  test_optics_zemax.py  test_paraxial.py  test_pbg.py  test_vector3.py
(+104 files in other folders)
