[tool.poetry]
name = "otk"
version = "0.1.0"
description = "Optics Tool Kit"
authors = ["Dane Austin <dane_austin@fastmail.com.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/draustin/otk"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
numba = "^0.49.1"
pyqt5 = "^5.14.2"
pyopengl = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
